overflow fix

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -653,7 +653,8 @@
 		background-color: #ffffff;
 		left: 0;
 		top: 0;
-		height: 100%;
+		/* height: 100%; */
+		height: 100vh;
 		overflow: hidden;
 		transform: translate(-100%);
 		transition: all 0.5s ease;
